--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,12 @@
 	path = Kha
 	url = ../Kha
 	branch = master
+[submodule "Libraries/primitive"]
+	path = Libraries/primitive
+	url = git@github.com:mebyz/primitive
+[submodule "Libraries/noisetile"]
+	path = Libraries/noisetile
+	url = git@github.com:mebyz/noisetile
+[submodule "Libraries/instances"]
+	path = Libraries/instances
+	url = git@github.com:mebyz/instances
