wwx2016 update khatile demo with latest Kha sources and haxe 3.3-rc

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Kha"]
 	path = Kha
-	url = ../Kha
+	url = github.com:KTXSoftware/Kha
 	branch = master
 [submodule "Libraries/primitive"]
 	path = Libraries/primitive
