--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,18 @@
 [submodule "Kha"]
 	path = Kha
-	url = github.com:KTXSoftware/Kha
-	branch = master
+	url = https://github.com/mebyz/Kha
 [submodule "Libraries/primitive"]
 	path = Libraries/primitive
-	url = git@github.com:mebyz/primitive
+	url = https://github.com/mebyz/primitive
 [submodule "Libraries/noisetile"]
 	path = Libraries/noisetile
-	url = git@github.com:mebyz/noisetile
+	url = https://github.com/mebyz/noisetile
 [submodule "Libraries/instances"]
 	path = Libraries/instances
-	url = git@github.com:mebyz/instances
+	url = https://github.com/mebyz/instances
+[submodule "Subprojects/aura"]
+	path = Subprojects/aura
+	url = https://github.com/MoritzBrueckner/aura
+[submodule "Subprojects/koui"]
+	path = Subprojects/koui
+	url = https://gitlab.com/koui/koui
