--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Clone private repo
-      run: git clone "https://gitlab.com/koui/koui.git" master Subprojects/koui
+      run: git clone "https://gitlab.com/koui/koui.git" Subprojects/koui
     - uses: actions/checkout@v1
       with:
         submodules: recursive
