--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Libraries/colyseus"]
 	path = Libraries/colyseus
 	url = https://github.com/mebyz/colyseus-haxe
+[submodule "Libraries/colyseus-websocket"]
+	path = Libraries/colyseus-websocket
+	url = https://github.com/colyseus/colyseus-websocket-hx
