--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build Khatile
 
 on: [push]
 
@@ -9,19 +9,24 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        haxe-version: [4.2.2]
         target: [html5]
 
     steps:
-    - name: Clone private repo
-      run: git clone "https://gitlab.com/koui/koui.git" Subprojects/koui
+    - name: checkout khatile & dependencies submodules
     - uses: actions/checkout@v1
       with:
         submodules: recursive
-    - name: Build (${{ matrix.target }}, ${{ matrix.os }})
+    - name: checkout koui (gitlab)
+      run: git clone "https://gitlab.com/koui/koui.git" Subprojects/koui
+    - name: export sound files
+      uses: canastro/copy-file-action@master
+      with:
+        source: "Assets/sound.ogg"
+        target: "build/html5/sound.ogg"
+    - name: build ${{ matrix.target }}
       run: |
         node Kha/make ${{ matrix.target }} --compile
-    - name: Deploy
+    - name: deploy to github pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: build/html5
