--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: checkout khatile & dependencies submodules
-    - uses: actions/checkout@v1
+      uses: actions/checkout@v1
       with:
         submodules: recursive
     - name: checkout koui (gitlab)
