--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,27 @@ jobs:
         os: [ubuntu-latest]
         target: [html5]
 
-    steps:
-    - name: checkout khatile & dependencies submodules
-      uses: actions/checkout@v1
-      with:
-        submodules: recursive
+        - uses: actions/cache/restore@v3
+          id: cache
+          with:
+            path: Kha
+            key: kha
+
+        - name: 
+          if: steps.cache.outputs.cache-hit != 'true'
+          steps:
+
+            - name: checkout khatile & dependencies submodules
+              uses: actions/checkout@v1
+              with:
+                submodules: recursive
+            - name: Cache Kha
+              uses: actions/cache@v3
+              with:
+                path: ~/Kha
+                key: kha
+                restore-keys: |
+                  kha
 
     - name: checkout koui (gitlab)
       run: git clone "https://gitlab.com/koui/koui.git" Subprojects/koui
